Fixed long words overflowing in posts

--- a/style/_collapsible.scss
+++ b/style/_collapsible.scss
@@ -9,6 +9,7 @@ input[type="checkbox"].collapse--toggle {
 
 .collapse--content {
   display: none;
+  overflow-wrap: break-word;
 }
 
 .collapse--toggle:checked + .collapse--lbl-toggle + .collapse--content {
